--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="JQ9-Vs-Qwg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="9Zk-GH-et6">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -72,26 +72,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bso-6x-NPW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2599" y="-174"/>
-        </scene>
-        <!--Parse Login View Controller-->
-        <scene sceneID="p4I-T8-UrV">
-            <objects>
-                <viewController id="Epb-jh-jLP" customClass="ParseLoginViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="1Bg-Zl-SsK"/>
-                        <viewControllerLayoutGuide type="bottom" id="gRV-Xb-Kf1"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="uff-R4-umY">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="oHT-Tx-HRD"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rUY-jg-gX4" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2070" y="-611"/>
+            <point key="canvasLocation" x="3125" y="-174"/>
         </scene>
         <!--Log In View Controller-->
         <scene sceneID="V7d-Ml-NTe">
@@ -117,7 +98,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" hint="Username"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V9v-MD-hva">
                                 <rect key="frame" x="50" y="138" width="222" height="30"/>
@@ -134,6 +115,7 @@
                                 </state>
                                 <connections>
                                     <action selector="onAddAccountButtonPressed:" destination="FIn-vU-JjN" eventType="touchUpInside" id="zzP-vB-UAY"/>
+                                    <segue destination="fmf-Ja-CwL" kind="push" id="LZQ-WR-XLY"/>
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Add Account" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B3i-ZL-iwN">
@@ -159,9 +141,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2er-lH-emD">
-                                <rect key="frame" x="137" y="221" width="30" height="30"/>
+                                <rect key="frame" x="137" y="221" width="43" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Go">
+                                <state key="normal" title="Log In">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -175,29 +157,51 @@
                     <connections>
                         <outlet property="passwordTextField" destination="2Dn-72-bcE" id="KFt-ou-XU2"/>
                         <outlet property="usernameTextField" destination="V9v-MD-hva" id="N8R-3Y-d4E"/>
+                        <segue destination="ElR-3F-2NJ" kind="push" identifier="SegueToCurrentUserProfile" id="bzh-zG-zYD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H9z-dL-304" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1533" y="56"/>
+            <point key="canvasLocation" x="2089" y="56"/>
+        </scene>
+        <!--View Controller - Profile-->
+        <scene sceneID="2SH-WO-c7h">
+            <objects>
+                <viewController id="ElR-3F-2NJ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7PC-OZ-eYv"/>
+                        <viewControllerLayoutGuide type="bottom" id="rGf-Xa-Jkq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2ea-iK-Cet">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Profile" id="tJK-tT-px4">
+                        <barButtonItem key="leftBarButtonItem" title="Log Out" id="iEv-2g-n6e"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q9B-xv-fpI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2639" y="376"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="qDp-9P-hs5">
+        <scene sceneID="Itn-73-uY3">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JQ9-Vs-Qwg" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9Zk-GH-et6" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Uhj-Gp-McF">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hax-iH-kpd">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Epb-jh-jLP" kind="relationship" relationship="rootViewController" id="VzE-tl-U90"/>
+                        <segue destination="FIn-vU-JjN" kind="relationship" relationship="rootViewController" id="FDp-LF-rGm"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KhX-Kn-ujB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MjP-cV-df5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1544" y="-611"/>
+            <point key="canvasLocation" x="1533" y="56"/>
         </scene>
     </scenes>
     <resources>
